lib/src/platforms/darwin/bindings.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for Darwin (iOS/macOS) `file_saver_ffi.h`.
///
/// Regenerate bindings with `fvm dart run ffigen --config ffigen.yaml`.
///
class FileSaverFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FileSaverFfiBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FileSaverFfiBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Initialize Dart API for NativePort communication.
  /// Must be called before using file_saver_save_bytes.
  ///
  /// @param data Pointer from NativeApi.initializeApiDLData
  /// @return 0 on success, -1 on failure
  int file_saver_init_dart_api_dl(ffi.Pointer<ffi.Void> data) {
    return _file_saver_init_dart_api_dl(data);
  }

  late final _file_saver_init_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
        'file_saver_init_dart_api_dl',
      );
  late final _file_saver_init_dart_api_dl =
      _file_saver_init_dart_api_dlPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> file_saver_init() {
    return _file_saver_init();
  }

  late final _file_saver_initPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
        'file_saver_init',
      );
  late final _file_saver_init =
      _file_saver_initPtr.asFunction<ffi.Pointer<ffi.Void> Function()>();

  void file_saver_dispose(ffi.Pointer<ffi.Void> instance) {
    return _file_saver_dispose(instance);
  }

  late final _file_saver_disposePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'file_saver_dispose',
      );
  late final _file_saver_dispose =
      _file_saver_disposePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Cancel an ongoing save operation.
  ///
  /// @param tokenId Token ID returned from file_saver_save_bytes or file_saver_save_file
  void file_saver_cancel(int tokenId) {
    return _file_saver_cancel(tokenId);
  }

  late final _file_saver_cancelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Uint64)>>(
        'file_saver_cancel',
      );
  late final _file_saver_cancel =
      _file_saver_cancelPtr.asFunction<void Function(int)>();

  /// Save file bytes asynchronously with progress reporting via NativePort.
  ///
  /// Progress messages sent to native_port:
  /// - Started:    [0]
  /// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
  /// - Error:      [2, errorCode, errorMessage]
  /// - Success:    [3, fileUri]
  /// - Cancelled:  [4]
  ///
  /// @param instance FileSaver instance from file_saver_init
  /// @param fileData Byte array of file content
  /// @param fileDataLength Length of fileData
  /// @param baseFileName File name without extension
  /// @param extension File extension without dot
  /// @param mimeType MIME type string
  /// @param saveLocation Save location index (0-4)
  /// @param subDir Optional subdirectory (can be NULL)
  /// @param conflictMode Conflict resolution mode (0-3)
  /// @param native_port Dart NativePort for progress reporting
  /// @return Token ID for cancellation
  int file_saver_save_bytes(
    ffi.Pointer<ffi.Void> instance,
    ffi.Pointer<ffi.Uint8> fileData,
    int fileDataLength,
    ffi.Pointer<ffi.Char> baseFileName,
    ffi.Pointer<ffi.Char> extension,
    ffi.Pointer<ffi.Char> mimeType,
    int saveLocation,
    ffi.Pointer<ffi.Char> subDir,
    int conflictMode,
    int native_port,
  ) {
    return _file_saver_save_bytes(
      instance,
      fileData,
      fileDataLength,
      baseFileName,
      extension,
      mimeType,
      saveLocation,
      subDir,
      conflictMode,
      native_port,
    );
  }

  late final _file_saver_save_bytesPtr = _lookup<
    ffi.NativeFunction<
      ffi.Uint64 Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Uint8>,
        ffi.Int64,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Int64,
      )
    >
  >('file_saver_save_bytes');
  late final _file_saver_save_bytes =
      _file_saver_save_bytesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              int,
              int,
            )
          >();

  /// Save file from source path asynchronously with progress reporting via
  /// NativePort.
  ///
  /// Reads source file in chunks without loading into memory - suitable for large
  /// files. Handles security-scoped resources (Files app) and iCloud file
  /// downloads.
  ///
  /// Progress messages sent to native_port:
  /// - Started:    [0]
  /// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
  /// - Error:      [2, errorCode, errorMessage]
  /// - Success:    [3, fileUri]
  /// - Cancelled:  [4]
  ///
  /// @param instance FileSaver instance from file_saver_init
  /// @param filePath Source file path (file:// URI)
  /// @param baseFileName Target file name without extension
  /// @param extension File extension without dot
  /// @param mimeType MIME type string
  /// @param saveLocation Save location index (0-1 for iOS)
  /// @param subDir Optional subdirectory (can be NULL)
  /// @param conflictMode Conflict resolution mode (0-3)
  /// @param native_port Dart NativePort for progress reporting
  /// @return Token ID for cancellation
  int file_saver_save_file(
    ffi.Pointer<ffi.Void> instance,
    ffi.Pointer<ffi.Char> filePath,
    ffi.Pointer<ffi.Char> baseFileName,
    ffi.Pointer<ffi.Char> extension,
    ffi.Pointer<ffi.Char> mimeType,
    int saveLocation,
    ffi.Pointer<ffi.Char> subDir,
    int conflictMode,
    int native_port,
  ) {
    return _file_saver_save_file(
      instance,
      filePath,
      baseFileName,
      extension,
      mimeType,
      saveLocation,
      subDir,
      conflictMode,
      native_port,
    );
  }

  late final _file_saver_save_filePtr = _lookup<
    ffi.NativeFunction<
      ffi.Uint64 Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Int64,
      )
    >
  >('file_saver_save_file');
  late final _file_saver_save_file =
      _file_saver_save_filePtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              int,
              int,
            )
          >();

  /// Save file from network URL asynchronously with progress reporting via
  /// NativePort.
  ///
  /// Downloads file at native level to avoid double storage:
  /// - Documents: Downloads directly to target path
  /// - Photos: Downloads to tmp, saves to Photos Library, deletes tmp
  ///
  /// Progress messages sent to native_port:
  /// - Started:    [0]
  /// - Progress:   [1, progress]    (progress is 0.0 to 1.0)
  /// - Error:      [2, errorCode, errorMessage]
  /// - Success:    [3, fileUri]
  /// - Cancelled:  [4]
  ///
  /// @param instance FileSaver instance from file_saver_init
  /// @param urlString URL to download from
  /// @param headersJson Optional JSON string of HTTP headers (can be NULL)
  /// @param timeoutSeconds Timeout in seconds for network request
  /// @param baseFileName File name without extension
  /// @param extension File extension without dot
  /// @param mimeType MIME type string
  /// @param saveLocation Save location index (0-1 for iOS)
  /// @param subDir Optional subdirectory (can be NULL)
  /// @param conflictMode Conflict resolution mode (0-3)
  /// @param native_port Dart NativePort for progress reporting
  /// @return Token ID for cancellation
  int file_saver_save_network(
    ffi.Pointer<ffi.Void> instance,
    ffi.Pointer<ffi.Char> urlString,
    ffi.Pointer<ffi.Char> headersJson,
    int timeoutSeconds,
    ffi.Pointer<ffi.Char> baseFileName,
    ffi.Pointer<ffi.Char> extension,
    ffi.Pointer<ffi.Char> mimeType,
    int saveLocation,
    ffi.Pointer<ffi.Char> subDir,
    int conflictMode,
    int native_port,
  ) {
    return _file_saver_save_network(
      instance,
      urlString,
      headersJson,
      timeoutSeconds,
      baseFileName,
      extension,
      mimeType,
      saveLocation,
      subDir,
      conflictMode,
      native_port,
    );
  }

  late final _file_saver_save_networkPtr = _lookup<
    ffi.NativeFunction<
      ffi.Uint64 Function(
        ffi.Pointer<ffi.Void>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Int64,
      )
    >
  >('file_saver_save_network');
  late final _file_saver_save_network =
      _file_saver_save_networkPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Char>,
              int,
              int,
            )
          >();

  /// Pick a directory via system Document Picker.
  ///
  /// Shows the system directory picker and returns the selected directory URI.
  ///
  /// Messages sent to native_port:
  /// - Success:    [3, directoryUri]
  /// - Cancelled:  [4]
  /// - Error:      [2, errorCode, errorMessage]
  ///
  /// @param instance FileSaver instance from file_saver_init
  /// @param native_port Dart NativePort for result reporting
  void file_saver_pick_directory(
    ffi.Pointer<ffi.Void> instance,
    int native_port,
  ) {
    return _file_saver_pick_directory(instance, native_port);
  }

  late final _file_saver_pick_directoryPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
  >('file_saver_pick_directory');
  late final _file_saver_pick_directory =
      _file_saver_pick_directoryPtr
          .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();
